# bfu2

./: .gitignore
ПИИиР/: 1-work.py  2-work.py  3-work.py  mashin_obuchenife.py  mathplotlib___1.py  numpyyy.py  numpyyy2.py  pandas__1.py  pandas__2.py  pillow__1.py  primer.py
авс/: 4laba.circ  laba4.doc  laba4.odt  laba5.circ  laba5.doc  laba5.odt  laba6.circ  laba6.doc  laba6.odt
асд-2/: laba1.py  laba10.py  laba11.py  laba12.py  laba13.py  laba2.py  laba3.py  laba4.py  laba5.py  laba6.py  laba7.py  laba8.py  laba9.py
асд/1-лаба/: 1-laba.cpp  CMakeLists.txt
асд/11-лаба/: 11-laba.py
асд/12-лаба/: 12-laba.py  input.txt  input2.txt  my_sort.py  sorted_output.txt
асд/13-лаба/: input.txt  main.py  outputfile.txt
асд/14-лаба/: input.txt  main.py  outputfile.txt
асд/15-лаба/: main.py
асд/16-лаба/: main.py
асд/17-лаба/: main.py
асд/2-лаба/: 2-laba.py
асд/3-лаба/: 3-laba.cpp  CMakeLists.txt
асд/4-лаба/: 4-laba.cpp  CMakeLists.txt
асд/5-лаба/: 5-laba.cpp  CMakeLists.txt
асд/6-лаба/: 6-laba.cpp  CMakeLists.txt
асд/7-лаба/: 7-laba.cpp  CMakeLists.txt
асд/8-лаба/: 8-laba.py
асд/9-лаба/: 9-laba.py
комплан/: .~lock.теория_комплан.odt#
программирование/3-семестр/: bilets_for.odt
программирование/3-семестр/1-лаба/: laba-1  laba-1.cpp
программирование/3-семестр/2-лаба/: laba-2  laba-2.cpp
программирование/4-семестр/: 4-семестр.sln
таят/: Комментарии-3.doc
таят/1-лаба/: laba_1.py
таят/2-лаба/: 1-part.py  2-part.py  3-part.py  4-part-2.py  4-part.py
таят/3-лаба/: laba.py
таят/4-labf/: laba-ERli.py  laba.py
таят/5-laba/: laba.py
(+18 files in other folders)
